--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,6 +18,11 @@
     justify-content: space-between;
     margin-left: 60px;
     margin-right: 60px;
+    Shadow: '1px 2px 9px #F4AAB9';
+    border-radius: 10px;
+}
+.imageinfo{
+    display: flex;
 }
 
 .info{
@@ -25,9 +30,17 @@
 }
 .image{
     padding: 10px;
+   
 }  
 
 .righthicon{
     padding-right: 10px;
+    font-size: 25px;
+    padding: 20px;
 
+}
+.addbotom{
+    justify-content: right;
+    margin: 20px;
+    size: 20px;
 }
